Fixed margin on mobile

--- a/css/hex.css
+++ b/css/hex.css
@@ -120,6 +120,13 @@ a:active {
 }
 */
 
+@media screen and (max-width:600px) {
+  body {
+    margin-left:5%;
+    margin-right:5%;
+  }
+}
+
 ::selection,
 ::-moz-selection,
 ::-o-selection,
